# 4-gewinnt

./: 4 Gewinnt.sln  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
4 Gewinnt/: 4 Gewinnt.cpp  4 Gewinnt.vcxproj  4 Gewinnt.vcxproj.filters  CMakeLists.txt  Functions.h  ReadMe.txt  stdafx.cpp  stdafx.h
